--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Babina Banjara</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:your.email@example.com">bbabina@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/<handle>">@bbabina</a></li>
+                    <li><a href="https://linkedin.com/in/<handle>">@babina-banjara-88788a1b1</a></li>
+                    <li><a href="https://twitter.com/<handle>">@BabinaB</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Advanced College of Engineering and Management
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>Running</li>
+                        <li>2023</li>
                     </ul>
                 </div>
             </section>
@@ -51,6 +51,8 @@
                     <li>HTML</li>
                     <li>JavaScript</li>
                     <li>Git</li>
+                    <li>Python</li>
+                    <li>Machine Learning</li>
                     <li>Visual Studio Code</li>
                 </ul>
             </section>
@@ -66,6 +68,7 @@
                     <li>Some skill</li>
                     <li>Another skill</li>
                 </ul>
+                <h3>FuseMachines AI Fellowship</h3>
             </section>
             <section class="box">
                 <h2>
