--- a/src/index.html
+++ b/src/index.html
@@ -65,23 +65,17 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Git</li>
+                    <li>Azure</li>
                 </ul>
                 <h3>FuseMachines AI Fellowship</h3>
-            </section>
-            <section class="box">
-                <h2>
-                    <i class="fa fa-building" aria-hidden="true"></i>
-                    Internships
-                </h2>
-
-                <h3>Company name</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>AI</li>
+                    <li>Machine Learning</li>
                 </ul>
+
             </section>
+            
             <section class="box">
                 <h2>
                     <i class="fa fa-cubes" aria-hidden="true"></i>
